bk_ida/gccida/g1/mark_used_regs_combine
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs_combine/src/combine.c:12218:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs_combine/src/combine.c:12238:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs_combine/src/combine.c:12258:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)x + 2)] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_used_regs_combine/src/obj/combine.o] Error 1
